--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,8 +5,8 @@ services:
     environment:
       ALLOWED_HOSTS: '*'
       UI_SCHEME: http
-      UI_HOST: <set to something>
-      UI_PORT: 7080 <I don't know why I have this at 7080, might need to be 8080>
+      UI_HOST: cvat.omnilert.io
+      UI_PORT: 8080
       CVAT_SHARE_URL: '/home/ubuntu/image_repositories'
     volumes:
       - cvat_share:/home/django/share:ro
@@ -15,13 +15,13 @@ services:
       - '80:8080'
   cvat_proxy:
     environment:
-      CVAT_HOST: <set to same as UI HOST>
+      CVAT_HOST: cvat.omnilert.io
 
 volumes:
   cvat_data:
     driver_opts:
       type: none
-      device: /home/data/cvat_data
+      device: /home/ubuntu/cvat_data
       o: bind
   cvat_share:
     driver_opts:
